[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-vdms"
version = "0.2.0"
description = "An integration package connecting VDMS and LangChain"
authors = []
requires-python = ">=3.10, <4.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "langchain-core<2.0.0,>=1.0.0",
    "vdms>=0.0.22",
]
repository = "https://github.com/IntelLabs/langchain-vdms"

[project.urls]
"Source Code" = "https://github.com/IntelLabs/langchain-vdms"
"Release Notes" = "https://github.com/IntelLabs/langchain-vdms/releases"

[dependency-groups]
dev = ["langchain-core>=1.0.0,<2"]
codespell = ["codespell>=2.2.6,<3"]
lint = ["ruff>=0.5,<0.6"]
test = [
    "pytest>=7.4.3,<8",
    "pytest-asyncio>=0.23.2,<0.24",
    "pytest-socket>=0.7.0",
    "pytest-watcher>=0.3.4,<0.4",
    "types-pyyaml>=6.0.12.20240917,<7",
    "langchain-core>=1.0.0,<2",
    "langchain-tests>=1.0.0,<2",
    "pytest-cov>=6.0.0,<7",
]
test_integration = []
typing = [
    "mypy>=1.10,<2",
    "types-pyyaml>=6.0.12.20240917,<7",
    "langchain-core>=1.0.0,<2",
]

[tool.coverage.run]
omit = ["tests/*"]

[tool.uv]
default-groups = ["typing"]
override-dependencies = ["urllib3>=2.6.0"]

[tool.mypy]
disallow_untyped_defs = "True"

[[tool.mypy.overrides]]
module = ["vdms", "simsimd"]
ignore_missing_imports = "True"

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5 --cov=langchain_vdms --cov-report=html --cov-report=term"
markers = [
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "T201", # print
]
